Had an issue where the cursor was changing to an error when I tried dragging on an already black square. I found someone with the same problem on stack overflow and implemented the same solution to fix it.

--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 body{
-    background-color: black;
+    background-color: grey;
 }
 
 .container{
     display: flex;
     flex-direction: column;
 
-    width: 640px;
-    height: 640px;
-    border: 5px solid blue;
+    width: 704px;
+    height: 704px;
+    border: 5px solid black;
     background-color: white;
-    /*
+    
     margin-left: auto;
     margin-right: auto;     
-    */
+    
 }
 
 #size{
@@ -32,8 +32,8 @@ body{
 }
 
 .box{
-
-    height: 40px;
-    width: 40px;
+    box-sizing: border-box;
+    height: 22px;
+    width: 22px;
     
 }
